[gd_scene load_steps=29 format=3 uid="uid://dowglo4uriad"]

[ext_resource type="Script" uid="uid://brkrqvq44686g" path="res://black_hole.gd" id="1_sjfy6"]
[ext_resource type="Texture2D" uid="uid://b3kgu5o13st5p" path="res://trounoir-frame-1.png" id="2_6528t"]
[ext_resource type="Texture2D" uid="uid://bw8fm843v885g" path="res://trounoir-particules.png" id="2_l8tb1"]
[ext_resource type="Texture2D" uid="uid://b17ahclwti2jq" path="res://trounoir-langues-frame-1.png" id="3_7bm11"]
[ext_resource type="Texture2D" uid="uid://dsgcv5tvh5bf4" path="res://trounoir-frame-2.png" id="3_l8tb1"]
[ext_resource type="Texture2D" uid="uid://bfc1egg0whad4" path="res://trounoir-langues-frame-2.png" id="4_8ngfd"]
[ext_resource type="Texture2D" uid="uid://cswc3pggv7xqe" path="res://trounoir-frame-3.png" id="4_rdexm"]
[ext_resource type="Texture2D" uid="uid://0wdo1ynqxju5" path="res://trounoir-langues-frame-3.png" id="5_k6pqh"]
[ext_resource type="Texture2D" uid="uid://c2q8kfp28mg01" path="res://trounoir-frame-4.png" id="5_vv1pq"]
[ext_resource type="Texture2D" uid="uid://c5ta8lh7j4ome" path="res://trounoir-langues-frame-4.png" id="6_q5a1m"]
[ext_resource type="Texture2D" uid="uid://vx7gfuup1pds" path="res://trounoir-frame-5.png" id="6_xhlxa"]
[ext_resource type="Texture2D" uid="uid://bafph3ts5q6h7" path="res://trounoir-frame-6.png" id="7_716ui"]
[ext_resource type="Texture2D" uid="uid://cgx3it1xeas66" path="res://trounoir-langues-frame-5.png" id="7_pmfqy"]
[ext_resource type="Texture2D" uid="uid://cbtn1qnoac57b" path="res://trounoir-langues-frame-6.png" id="8_8lv33"]
[ext_resource type="Texture2D" uid="uid://byhfucnr321gr" path="res://trounoir-frame-7.png" id="8_oo2oj"]
[ext_resource type="Texture2D" uid="uid://b7bfc48ndkff" path="res://trounoir-langues-frame-7.png" id="9_glebm"]
[ext_resource type="Texture2D" uid="uid://dlwxktljeb8x3" path="res://trounoir-frame-8.png" id="9_wn07g"]
[ext_resource type="Texture2D" uid="uid://bgksg8fakg5pb" path="res://trounoir-frame-9.png" id="10_6tbdi"]
[ext_resource type="Texture2D" uid="uid://cyqf1rrqmjr8s" path="res://trounoir-langues-frame-8.png" id="10_racfy"]
[ext_resource type="Texture2D" uid="uid://c12deqh1vlnfr" path="res://trounoir-frame-10.png" id="11_7bm11"]
[ext_resource type="Texture2D" uid="uid://b8okdoc3vpjlq" path="res://trounoir-frame-11.png" id="12_8ngfd"]
[ext_resource type="Texture2D" uid="uid://cempjiv3gqkj1" path="res://trounoir-frame-12.png" id="13_k6pqh"]
[ext_resource type="Script" uid="uid://dg0u3d07mtfaw" path="res://danger_zone.gd" id="23_8ngfd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q56d7"]
size = Vector2(50, 100000)

[sub_resource type="SpriteFrames" id="SpriteFrames_rdexm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_l8tb1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_eyipy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_7bm11")
}, {
"duration": 1.0,
"texture": ExtResource("4_8ngfd")
}, {
"duration": 1.0,
"texture": ExtResource("5_k6pqh")
}, {
"duration": 1.0,
"texture": ExtResource("6_q5a1m")
}, {
"duration": 1.0,
"texture": ExtResource("7_pmfqy")
}, {
"duration": 1.0,
"texture": ExtResource("8_8lv33")
}, {
"duration": 1.0,
"texture": ExtResource("9_glebm")
}, {
"duration": 1.0,
"texture": ExtResource("10_racfy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_q5a1m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6528t")
}, {
"duration": 1.0,
"texture": ExtResource("3_l8tb1")
}, {
"duration": 1.0,
"texture": ExtResource("4_rdexm")
}, {
"duration": 1.0,
"texture": ExtResource("5_vv1pq")
}, {
"duration": 1.0,
"texture": ExtResource("6_xhlxa")
}, {
"duration": 1.0,
"texture": ExtResource("7_716ui")
}, {
"duration": 1.0,
"texture": ExtResource("8_oo2oj")
}, {
"duration": 1.0,
"texture": ExtResource("9_wn07g")
}, {
"duration": 1.0,
"texture": ExtResource("10_6tbdi")
}, {
"duration": 1.0,
"texture": ExtResource("11_7bm11")
}, {
"duration": 1.0,
"texture": ExtResource("12_8ngfd")
}, {
"duration": 1.0,
"texture": ExtResource("13_k6pqh")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k6pqh"]
size = Vector2(2501, 2000)

[node name="Black Hole" type="Area2D"]
script = ExtResource("1_sjfy6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q56d7")

[node name="Halo" type="AnimatedSprite2D" parent="."]
position = Vector2(-488, 0)
sprite_frames = SubResource("SpriteFrames_rdexm")

[node name="Tentacles" type="AnimatedSprite2D" parent="." groups=["tentacles"]]
position = Vector2(498, 38)
rotation = 1.57079
sprite_frames = SubResource("SpriteFrames_eyipy")
frame_progress = 0.751767

[node name="Tentacles2" type="AnimatedSprite2D" parent="." groups=["tentacles"]]
position = Vector2(438, -252)
rotation = 1.33161
sprite_frames = SubResource("SpriteFrames_eyipy")
frame_progress = 0.366624

[node name="Tentacles3" type="AnimatedSprite2D" parent="." groups=["tentacles"]]
position = Vector2(417, 347)
rotation = 1.84444
sprite_frames = SubResource("SpriteFrames_eyipy")
frame_progress = 0.366624

[node name="Tentacles4" type="AnimatedSprite2D" parent="." groups=["tentacles"]]
position = Vector2(342, -526)
rotation = 1.17885
sprite_frames = SubResource("SpriteFrames_eyipy")
frame_progress = 0.366624

[node name="Tentacles5" type="AnimatedSprite2D" parent="." groups=["tentacles"]]
position = Vector2(297, 611)
rotation = 1.90642
sprite_frames = SubResource("SpriteFrames_eyipy")
frame_progress = 0.366624

[node name="Body" type="AnimatedSprite2D" parent="."]
position = Vector2(-482.323, -0.234313)
scale = Vector2(0.90405, 0.90405)
sprite_frames = SubResource("SpriteFrames_q5a1m")
frame_progress = 0.726347
speed_scale = 0.3

[node name="DangerZone" type="Area2D" parent="."]
script = ExtResource("23_8ngfd")

[node name="Warning" type="CollisionShape2D" parent="DangerZone"]
position = Vector2(-518.5, 0)
shape = SubResource("RectangleShape2D_k6pqh")

[connection signal="body_entered" from="DangerZone" to="DangerZone" method="_on_body_entered"]
[connection signal="body_exited" from="DangerZone" to="DangerZone" method="_on_body_exited"]
